# picomate-base

./: .env.example  .gitignore  Cargo.toml  build.rs  flash.sh  how_it_works.md  memory-app.x
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: main.rs
src/: button.rs  buzzer.rs  encoder.rs  main.rs  oled.rs  ota.rs  pir.rs  rgb.rs  wifi.rs
tasks/: lessons.md  todo.md
