[workspace]
members = [".", "bootloader"]
resolver = "2"

[package]
name = "picomate-base"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
debug = 2
lto = true
opt-level = "s"

[dependencies]
cyw43 = { version = "0.6.0", features = ["defmt"] }
cyw43-pio = "0.9.0"
embassy-boot = "0.6.1"
embassy-boot-rp = { version = "0.9.0", features = ["defmt"] }
embassy-net = { version = "0.8", features = ["defmt", "dhcpv4", "medium-ethernet", "proto-ipv4", "tcp"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["critical-section-impl", "defmt", "rp2040", "time-driver"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "tick-hz-1_000_000"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
portable-atomic = { version = "1", features = ["critical-section"] }
fixed = "1.28"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-storage = "0.3"
ssd1306 = "0.9"
heapless = "0.8"
