[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[dependencies]
embassy-boot-rp = { version = "0.9.0", features = ["defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "rp2040", "critical-section-impl"] }
embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
cortex-m-rt = "0.7"
cortex-m = "0.7"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-sync = "0.7.0"
embedded-storage = "0.3"
portable-atomic = { version = "1", features = ["critical-section"] }
